# planproof

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/planproof_api/: config.py  main.py  routes.py
apps/api/src/planproof_api/agent/: extractor.py  planner.py  schemas.py
apps/api/src/planproof_api/observability/: opik.py
apps/api/static/: app.js  index.html  styles.css
apps/api/tests/: conftest.py  test_constraints.py  test_extractor.py  test_feasibility.py  test_hallucination.py  test_recall.py  test_repair_logic.py  test_time_math.py
docs/: eval_contract_v0.md  eval_contract_v1.md  eval_contract_v1_1.md  eval_contract_v1_2.md  google-critique-plan.md
docs/assistant_prompts/: claude_tasks.md  claude_ui_instructions.md  codex_tasks.md
eval/: constraints.py  feasibility.py  hallucination.py  recall.py  time_math.py
scripts/: test_extractor.py  test_scenarios.py
