[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planproof-api"
version = "0.1.0"
description = "PlanProof API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.103",
    "pydantic<2",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
